--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dom": "^0.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.4.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.1"
   },
   "devDependencies": {
